WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272694
[Site Isolation] Popup menus are incorrectly offset
https://bugs.webkit.org/show_bug.cgi?id=272694
Summary
[Site Isolation] Popup menus are incorrectly offset
Charlie Wolfe
Reported
2024-04-15 12:00:10 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-15 12:00:29 PDT
<
rdar://problem/126497992
>
Charlie Wolfe
Comment 2
2024-04-15 12:01:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27275
EWS
Comment 3
2024-04-15 18:05:27 PDT
Committed
277523@main
(98fb7757cc6a): <
https://commits.webkit.org/277523@main
> Reviewed commits have been landed. Closing PR #27275 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug