[Site Isolation] Popup menus are incorrectly offset https://bugs.webkit.org/show_bug.cgi?id=272694 rdar://126497992

Reviewed by Alex Christensen.

When a popup menu is opened from an isolated iframe the menu will be offset because iframe processes
cannot convert to root view coordinates. To convert to root view coordinates we need to convert from
the parent of each root frame.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showPopupMenuFromFrame):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebCoreSupport/WebPopupMenu.cpp:
(WebKit::WebPopupMenu::show):

Canonical link: https://commits.webkit.org/277523@main